--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 						<header class="major">
 							<h2>¿Quiénes somos?</h2>
 							<p>Somos un equipo creativo con ideas innovadoras y gran pasión por el Diseño que quiere cambiar el mundo sin pensar en los límites.
-						<span class="image featured"><img src="images/fotogrupal.jpg"></span>
+								<br>
+								<span class="image featured"><img src="images/fotogrupal.jpg"></span>
+								<br>
+								<img src="images/infografia.jpg">
 					</section>
 
 					<section id="main" class="container">
@@ -120,7 +123,7 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/Antu.jpg" alt="" /></span>
-								<h3>Antuane Santillan</h3>
+								<h3>Antuane Santillana</h3>
 								<p>Hola soy Antuane Santillana Carrillo pero me pueden llamar Antu con confianza jeje, estudio la carrera de CAM y actualmente me encuentro cursando el 8vo ciclo. Soy de las personas que les gusta hacer actividades diferentes y aprender cosas nuevas, entre mis gustos están la fotografía, el teatro, ver tendencias, combinar ropa y más. Mi sueño anhelado es poder emprender mi propia agencia donde realice servicios Audiovisuales y sobretodo poner a prueba mi creatividad, innovación y constancia. Disfruten de su estadía aquí, un gusto conocerlos.</p>
 								<ul class="actions special">
 									<li><a href="http://antusc.github.io/ANTUANE/" class="button alt">Ver mi web</a></li>
@@ -132,11 +135,11 @@
 						<div class="col-9 col-18-narrower">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/Nayset.jpg" alt="" /></span>
+								<span class="image featured"><img src="./images/Nayset.jpg" alt="" /></span>
 								<h3>Nayset Lozada</h3>
 								<p>Hola, soy Nayset Lozada, tengo 20 años, estoy curzando el 7to ciclo de la carrera de Arquitectura de Interiores en Toulouse Lautrec. Desde muy pequeña me gustaba todo lo relacionado a decoración de interiores. A mi familia siempre le gusto la idea de que estudie esta carrera, cuanto con todo su apoyo y motivación. Estoy en proceso de crear mi propio estudio de Arquitectura e Interiorismo con una prima lo cual me emociona mucho.</p>
 								<ul class="actions special">
-									<li><a href="https://naysetslq03.github.io/Nayset-Lozada/" class="button alt">Ver mi web</a></li>
+									<li><a href="https://naysetslq27.github.io/finalprueba/" class="button alt">Ver mi web</a></li>
 								</ul>
 							</section>
 
