--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 								<span class="image featured"><img src="images/fotogrupal.jpg"></span>
 								<br>
 								<img src="images/infografia.jpg">
+								<img src="images/infografianueva.jpg">
 					</section>
 
 					<section id="main" class="container">
