--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 								<h3>Antuane Santillana</h3>
 								<p>Hola soy Antuane Santillana Carrillo pero me pueden llamar Antu con confianza jeje, estudio la carrera de CAM y actualmente me encuentro cursando el 8vo ciclo. Soy de las personas que les gusta hacer actividades diferentes y aprender cosas nuevas, entre mis gustos están la fotografía, el teatro, ver tendencias, combinar ropa y más. Mi sueño anhelado es poder emprender mi propia agencia donde realice servicios Audiovisuales y sobretodo poner a prueba mi creatividad, innovación y constancia. Disfruten de su estadía aquí, un gusto conocerlos.</p>
 								<ul class="actions special">
-									<li><a href="http://antusc.github.io/ANTUANE/" class="button alt">Ver mi web</a></li>
+									<li><a href="https://antusc.github.io/AntuSantillana.github.io/" class="button alt">Ver mi web</a></li>
 								</ul>
 							</section>
 
